--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -126,23 +126,12 @@ jobs:
           echo "NEW_CONFIG=$newVersionConfig" >> $GITHUB_ENV
           echo "OLD_CONFIG=$oldVersionConfig" >> $GITHUB_ENV
       
-      - name: Get commits 
-        id: get-commits
-        if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
-        run: |
-           chmod +x ../.github/workflows/git-changelog.sh
-           ../.github/workflows/git-changelog.sh -t=v-${{ env.OLD_CONFIG }}
-        shell: bash
-
-      - name: Print values 
-        run: echo $(cat ./gitlog.md)
-         
       - name: Create Release page
         id: create_release_github
         if: ${{ github.event.inputs.action == 'Start' && github.event.inputs.type == 'Release' }}
         uses: actions/github-script@v6
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          github-token: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
           script: |
             await github.request (`POST /repos/${{ github.repository }}/releases`, {
               tag_name: "${{ env.NEW_CONFIG }}",
