--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -12,4 +12,10 @@ jobs:
       run: npm install @commitlint/config-conventional
     - uses: JulienKode/pull-request-name-linter-action@v0.5.0
       with:
-        configuration-path: ./.github/workflows/commitlint.config.js 
+        configuration-path: ./.github/workflows/commitlint.config.js
+    - name: Create comment
+      uses: peter-evans/create-or-update-comment@v2
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        body: github-actions[bot] approves this pull request comment
+        reactions: rocket
