--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -43,6 +43,7 @@ jobs:
         uses: actions/checkout@v2
         if: ${{ github.event.inputs.type == 'Release' }}
         with:
+          token: ${{ secrets.TOKEN }}
           ref: develop
       
       - name: Checkout master for ${{ github.event.inputs.type }}
