--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -12,4 +12,19 @@ jobs:
       run: npm install @commitlint/config-conventional
     - uses: JulienKode/pull-request-name-linter-action@v0.5.0
       with:
-        configuration-path: ./.github/workflows/commitlint.config.js 
+        configuration-path: ./.github/workflows/commitlint.config.js
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}      
