--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -21,6 +21,7 @@ jobs:
         reactions: rocket
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
